# document-intelligence-refinery

./: .env.example  .gitignore  README.md  pyproject.toml
.github/agents/: copilot-instructions.md
.refinery/: documents.json  model_decisions.jsonl
.refinery/facts/: facts.db
.refinery/pageindex/: a63c94a631c9.json  ccb87d03bb66.json  f2f95274829d.json
.refinery/profiles/: 0a6090fab55a46d6.json  33642ef080f53706.json  f19c466107a341f2.json
.specify/memory/: constitution.md
docs/: DELIVERY_CHECKLIST.md  DEMO_PROTOCOL.md  DOMAIN_NOTES.md  EXTRACTION_PIPELINE_REPORT.md  VECTOR_DATABASE_GUIDE.md
frontend/: .gitignore  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: app-footer.tsx  chat-panel.tsx  document-list.tsx  document-uploader.tsx  model-config-panel.tsx  nav-bar.tsx  provenance-card.tsx
frontend/lib/: api-client.ts  use-job-status.ts
rubric/: extraction_rules.yaml  pricing.yaml
scripts/: test_proclamation_query.py  test_vulnerability_disclosure_query.py
specs/001-document-intelligence-refinery-mvp/: 02_design.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/templates/: 01_spec.template.md  02_design.template.md  03_tasks.template.md  README.md
src/: __init__.py  exceptions.py
src/agents/: chunker.py  extractor.py  indexer.py  query_agent.py  triage.py
src/api/: app.py
src/models/: extracted_document.py  extraction_ledger.py  pageindex.py
src/services/: fact_extractor.py  fact_table.py  model_gateway.py  pricing.py  (+3 more)
(+28 files in other folders)
